--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Generate changelog preview
         id: changelog
+        continue-on-error: true
         uses: ./actions/release/changelog-conventional-commit
         with:
           mode: "pr"
@@ -44,7 +45,7 @@ jobs:
           output: changelog_preview.md
 
       - name: Publish PR changelog comment
-        if: ${{ github.event_name == 'pull_request' && always() }}
+        if: ${{ github.event_name == 'pull_request' && steps.changelog.outcome == 'success' && steps.changelog.outputs.output_path != '' }}
         uses: ./actions/core/pr-comment-update
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -70,6 +71,16 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           tags: "<!-- loom-quality-report -->"
           body-file: ${{ steps.quality.outputs.report-file }}
+
+      - name: Enforce changelog generation
+        if: ${{ always() }}
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${{ steps.changelog.outcome }}" != "success" ]; then
+            echo "Changelog preview generation failed"
+            exit 1
+          fi
 
       - name: Enforce quality gate
         if: ${{ always() }}
