--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - uses: actions/setup-python@v5
         with:
@@ -33,13 +34,20 @@ jobs:
         run: |
           uv run --with pytest --with jinja2 pytest -q tests/unit/test_quality_builder.py
 
+      - name: Fetch PR base branch ref for changelog diff
+        shell: bash
+        run: |
+          set -euo pipefail
+          git fetch --no-tags --prune origin \
+            "+refs/heads/${{ github.base_ref }}:refs/remotes/origin/${{ github.base_ref }}"
+
       - name: Generate changelog preview
         id: changelog
         continue-on-error: true
         uses: ./actions/release/changelog-conventional-commit
         with:
           mode: "pr"
-          branch: ${{ github.head_ref }}
+          branch: ${{ github.event.pull_request.head.sha }}
           version: "UNRELEASED"
           base-ref: origin/${{ github.base_ref }}
           output: changelog_preview.md
