feat: harden release flow and stable changelog refs

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Run builder unit tests
         run: |
-          uv run --with pytest --with jinja2 pytest -q tests/unit/test_quality_builder.py
+          uv run --with pytest --with jinja2 pytest -q tests/unit
 
       - name: Smoke quality action (strict)
         uses: ./actions/python/quality-report
