--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,7 @@ name: release
 
 on:
   push:
-    branches: ["main"]
-    paths-ignore:
-      - "CHANGELOG.md"
-      - "pyproject.toml"
+    branches: ["master"]
 
 permissions:
   contents: write
@@ -86,7 +83,7 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           branch: release/${{ steps.version.outputs.version }}
-          base: main
+          base: master
           title: "chore(release): prepare v${{ steps.version.outputs.version }} [automated]"
           body: |
             This PR was created automatically by the `release` workflow.
