feat: standardize release docs and auto-merge release PR

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,7 @@ jobs:
 
       - name: Open or update release PR
         if: ${{ steps.version.outputs.deploy == 'true' }}
+        id: cpr
         uses: peter-evans/create-pull-request@v6
         with:
           branch: release/${{ steps.version.outputs.version }}
@@ -96,6 +97,19 @@ jobs:
           add-paths: CHANGELOG.md,pyproject.toml
           labels: release,automated
           commit-message: "chore(release): prepare v${{ steps.version.outputs.version }} [automated]"
+
+      - name: Enable auto-merge for release PR
+        if: ${{ steps.version.outputs.deploy == 'true' && steps.cpr.outputs.pull-request-number != '' }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
+        run: |
+          set -euo pipefail
+          gh pr merge "${{ steps.cpr.outputs.pull-request-number }}" \
+            --squash \
+            --auto \
+            --repo "${{ github.repository }}" || \
+            echo "Unable to enable auto-merge for release PR; verify repository auto-merge settings."
 
   publish-release:
     runs-on: ubuntu-latest
