--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,6 +109,7 @@ jobs:
           gh pr merge "${{ steps.cpr.outputs.pull-request-number }}" \
             --squash \
             --auto \
+            --delete-branch \
             --repo "${{ github.repository }}"
 
   publish-release:
