--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
           draft: false
           delete-branch: true
           add-paths: CHANGELOG.md,pyproject.toml
-          labels: release,automated
+          labels: release,automated,version:${{ steps.version.outputs.version }}
           commit-message: "chore(release): prepare v${{ steps.version.outputs.version }} [automated]"
 
       - name: Enable auto-merge for release PR
@@ -109,6 +109,7 @@ jobs:
           gh pr merge "${{ steps.cpr.outputs.pull-request-number }}" \
             --squash \
             --auto \
+            --delete-branch \
             --repo "${{ github.repository }}"
 
   publish-release:
